--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,9 @@
 	<description>Maven Standalone Application</description>
 
 	<properties>
-		<sonar.host.url>http://172.31.18.127:9000/</sonar.host.url>
-		<sonar.login>admin</sonar.login>
-		<sonar.password>admin</sonar.password>
+		<sonar.host.url>http://http://18.224.213.241:9000/</sonar.host.url>
+		<sonar.login>aboro049</sonar.login>
+		<sonar.password>27dresses</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
