--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<description>Maven Standalone Application</description>
 
 	<properties>
-		<sonar.host.url>http://18.224.213.241/:9000/</sonar.host.url>
+		<sonar.host.url>http://18.224.213.241:9000/</sonar.host.url>
 		<sonar.login>aboro049</sonar.login>
 		<sonar.password>27dresses</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
